[ADD] Get Coding by title, Del by id
