# backend/docs/swagger.json
@@ -240,6 +240,51 @@
                 }
             }
         },
+        "/codingInterview.getQuestionByTitle/{title}": {
+            "get": {
+                "description": "Get coding interview question by title",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "codingInterview"
+                ],
+                "summary": "Get coding interview question by title",
+                "operationId": "GetQuestionByTitle",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Question Title",
+                        "name": "title",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response with the coding interview question by title",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.Response-handlers_CodingInterviewGetQuestionByTitleResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/codingInterview.getQuestions": {
             "get": {
                 "description": "Get coding interview questions",
@@ -2412,6 +2457,35 @@
                 }
             }
         },
+        "handlers.CodingInterviewGetQuestionByTitleResponse": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "difficulty": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "input_description": {
+                    "type": "string"
+                },
+                "output_description": {
+                    "type": "string"
+                },
+                "test_case": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domains.CodingQuestionTestCaseResponse"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.ErrResponse": {
             "type": "object",
             "properties": {
@@ -2726,6 +2800,23 @@
                     "items": {
                         "$ref": "#/definitions/domains.CompilationResultResponse"
                     }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.Response-handlers_CodingInterviewGetQuestionByTitleResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/handlers.CodingInterviewGetQuestionByTitleResponse"
                 },
                 "message": {
                     "type": "string"
