# backend/loaders/route.go
@@ -89,9 +89,11 @@ func SetupRoutes() {
 	// codingInterview
 	public.Get("codingInterview.getQuestions", codingInterviewHandlers.GetQuestions)
 	public.Get("codingInterview.getQuestionsInPortal/:portalId", codingInterviewHandlers.GetQuestionsInPortal)
+	public.Get("codingInterview.getQuestionByTitle/:title", codingInterviewHandlers.GetQuestionByTitle)
 	public.Post("codingInterview.getCompileResult", codingInterviewHandlers.GetCompileResult)
 	public.Post("codingInterview.createQuestion", codingInterviewHandlers.CreateQuestion)
 	public.Post("codingInterview.addQuestion", codingInterviewHandlers.AddQuestion)
+	public.Delete("codingInterview.deleteQuestion/:codingQuestionID", codingInterviewHandlers.DeleteQuestion)
 
 	// video question
 	public.Post("videoQuestion.createVideoQuestion", questionHandlers.CreateVideoQuestion)
